--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,11 @@
   color: #61dafb;
 }
 
+.App-footer {
+  text-align: center;
+  justify-content: flex-end;
+  }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
