--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,44 +1,66 @@
 /* About.css */
 
 .quote-header {
-    margin: 30px 0;
-    font-size: 24px;
-    color: #171A1FFF;
+  margin: 30px 0;
+  font-size: 24px;
+  color: #171A1FFF;
+}
+
+.two-column-layout {
+  display: flex;
+}
+
+.left-column,
+.right-column {
+  flex: 1;
+  padding: 10px;
+}
+
+.left-column {
+  background-color: #f0f0f0;
+  /* Add your preferred background color */
+}
+
+.right-column {
+  background-color: #f9f9f9;
+  /* Add your preferred background color */
+}
+
+.meet-the-team {
+  margin-top: 30px;
+  font-weight: bold;
+}
+
+.team-members {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 20px;
+}
+
+.team-member-image {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+/* in about.css */
+.marquee-container {
+  overflow: hidden;
+  white-space: nowrap;
+}
+
+.marquee {
+  animation: scrollText 30s linear infinite;
+}
+
+/* Keyframes for scrolling animation */
+@keyframes scrollText {
+  from {
+    transform: translateX(100%);
   }
-  
-  .two-column-layout {
-    display: flex;
+
+  to {
+    transform: translateX(-100%);
   }
-  
-  .left-column, .right-column {
-    flex: 1;
-    padding: 10px;
-  }
-  
-  .left-column {
-    background-color: #f0f0f0; /* Add your preferred background color */
-  }
-  
-  .right-column {
-    background-color: #f9f9f9; /* Add your preferred background color */
-  }
-  
-  .meet-the-team {
-    margin-top: 30px;
-    font-weight: bold;
-  }
-  
-  .team-members {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 20px;
-  }
-  
-  .team-member-image {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  
-  
+}
