empty video container for new frame, made carousel items for team img for future devs

--- a/src/pages/about/about.css
+++ b/src/pages/about/about.css
@@ -1,34 +1,84 @@
 /* About.css */
 
-.quote-header {
-  margin: 30px 0;
-  font-size: 24px;
-  color: #171A1FFF;
+.carousel-item {
+  color: #dbdbde;
+  font-family: "Haas Grot Text R Web", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 50px;
+  font-weight: 700;
+  line-height: 60px;
+  padding: 0 20px;
+  text-align: center;
 }
 
-.two-column-layout {
-  display: flex;
+.carousel-row {
+  -webkit-transform: translateX(-50%);
+  -ms-transform: translateX(-50%);
+  transform: translateX(-50%);
+  height: 38px;
+  position: relative;
 }
 
-.left-column,
-.right-column {
+.carousel-track {
+  -webkit-animation: carousel-loop 40s linear infinite;
+  animation: carousel-loop 40s linear infinite;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  position: absolute;
+  white-space: nowrap;
+  will-change: transform;
+}
+
+.left-column {
+  background-color: 'whitesmoke';
+  /* Add your preferred background color */
   flex: 1;
   padding: 10px;
 }
 
-.left-column {
-  background-color: #f0f0f0;
-  /* Add your preferred background color */
+.marquee {
+  animation: scrollText 30s linear infinite;
 }
 
-.right-column {
-  background-color: #f9f9f9;
-  /* Add your preferred background color */
+.marquee-container {
+  overflow: hidden;
+  white-space: nowrap;
 }
 
 .meet-the-team {
-  margin-top: 30px;
   font-weight: bold;
+  margin-top: 30px;
+}
+
+.quote-header {
+  color: #171A1FFF;
+  font-size: 24px;
+  margin: 30px 0;
+}
+
+.right-column {
+  background-color: 'whitesmoke';
+  /* Add your preferred background color */
+  flex: 1;
+  padding: 10px;
+}
+
+.rolling-carousel .carousel-row {
+  height: 60px;
+}
+
+.rolling-carousel .carousel-row+.carousel-row {
+  margin-top: 24px;
+}
+
+.rolling-carousel .carousel-row:nth-child(even) .carousel-track {
+  animation-direction: reverse;
+}
+
+.team-member-image {
+  border-radius: 50%;
+  height: 100px;
+  object-fit: cover;
+  width: 100px;
 }
 
 .team-members {
@@ -37,21 +87,21 @@
   margin-top: 20px;
 }
 
-.team-member-image {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  object-fit: cover;
+.two-column-layout {
+  display: flex;
 }
 
-/* in about.css */
-.marquee-container {
-  overflow: hidden;
-  white-space: nowrap;
-}
+/* Keyframes for scrolling animation */
+@keyframes carousel-loop {
+  from {
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0)
+  }
 
-.marquee {
-  animation: scrollText 30s linear infinite;
+  to {
+    -webkit-transform: translate3d(-50%, 0, 0);
+    transform: translate3d(-50%, 0, 0)
+  }
 }
 
 /* Keyframes for scrolling animation */
@@ -64,3 +114,25 @@
     transform: translateX(-100%);
   }
 }
+
+
+/* about.css */
+
+.video-section {
+  max-height: 400px; /* Set the maximum height of the video section container */
+  overflow: hidden; /* Hide any content that overflows the container */
+  margin-bottom: 20px; /* Optional margin at the bottom of the container */
+}
+
+.video-container {
+  width: 100%; /* Ensure the video container takes the full width of its parent */
+  height: 100%; /* Ensure the video container takes the full height of its parent */
+  position: relative; /* Set the position to relative for absolute positioning of the video */
+}
+
+#thim-video {
+  position: absolute; /* Position the video absolutely within the container */
+  top: 0; /* Align the video to the top of the container */
+  left: 0; /* Align the video to the left of the container */
+}
+
